# lueder-chess-zero

./: .clang-format  .gitignore  CMakeLists.txt  README.md  start_app.sh  stop_app.sh
alphazero/src/: annotate_games.py  api.py  bootstrap.py  config.py  helper.py  mcts.py  perft_driver.py  prepare_pgn_data.py  resnet.py  self_play.py  stockfish.py  utils.py  wrapper.py
alphazero/tests/: test.py  test_mcts.py  test_wrapper.py
chess-frontend/: index.html  package-lock.json  package.json
chess-frontend/src/: main.ts  style.css
src/: CMakeLists.txt  main.c
src/chess/attacks/: static_attacks.c  static_attacks.h
src/chess/magic/: magic_generator.c  magic_generator.h
src/common/: bitboard_utils.c  bitboard_utils.h  constants.c  constants.h  move_encoding.c  move_encoding.h  types.h
src/framework/application/: UCI.c  UCI.h
src/framework/chess/board/: board.c  board.h
src/framework/chess/movegeneration/: masks_and_attacks.c  masks_and_attacks.h  move_generation.c  move_generation.h
src/framework/chess/search/: search.c  search.h
src/tests/: perft.c  perft.h  perft_runner.c  test_macros.h  test_runner.c  test_suite.c  test_suite.h  test_utils.c  test_utils.h
